# wol

./: .dockerignore  .flake8  .gitignore  404.html  README.md  app.py  cli.md  cli.py  decorators.py  fields.py  index.html  logic.py  main.py  pyproject.toml  sitemap.xml  views.py
.github/workflows/: ci.yml  release.yaml
app/: __init__.py  decorators.py  doc_utils.py  fields.py  logic.py  models.py  views.py
app/logic/: core.py  crud.py
app/views/: __init__.py  core.py  crud.py  pages.py
cli/: index.html
docker/: Dockerfile  Dockerfile-prod  Dockerfile.prod  docker-compose.yml
docs/: api.html  api.yml
reference/app/: index.html
reference/app/decorators/: index.html
reference/app/doc_utils/: index.html
reference/app/fields/: index.html
reference/app/logic/: index.html
reference/app/logic/core/: index.html
reference/app/logic/crud/: index.html
reference/app/models/: index.html
reference/app/views/: index.html
reference/app/views/core/: index.html
reference/app/views/crud/: index.html
reference/app/views/pages/: index.html
reference/wol/: index.html
reference/wol/cli/: index.html
reference/wol/decorators/: index.html
reference/wol/doc_utils/: index.html
reference/wol/fields/: index.html
reference/wol/logic/: index.html
reference/wol/logic/core/: index.html
reference/wol/logic/crud/: index.html
reference/wol/models/: index.html
reference/wol/views/: index.html
reference/wol/views/core/: index.html
reference/wol/views/crud/: index.html
reference/wol/views/pages/: index.html
reference/wol/wsgi/: index.html
search/: search_index.json
templates/: ping_success.html
wol/: cli.py  decorators.py  fields.py  models.py  wsgi.py
wol/app/: __init__.py  fields.py
wol/app/logic/: core.py
wol/app/templates/: base.html  ping_fail.html  targets.html
wol/app/views/: crud.py
wol/logic/: core.py  crud.py
wol/views/: __init__.py  core.py
