[tool.poetry]
name = "wol"
version = "0.1.0"
description = ""
authors = ["Tim <jlemyp96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
wakeonlan = "^1.1"
pyexpect = "^1.0"
flask = "^1.1.2"
fabric = { version = "^2.5", markers = "platform_machine != 'mips'" } # can't build pynacl on mips
singledispatchmethod = { version = "^1.0", python = "~3.7.0" }
marshmallow = "^3.5.2"
validators = "^0.14.3"
scapy = "^2.4.3"
configargparse = "^1.2.3"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
ipython = "^7.5"
pytest = "^3.0"
flake8-isort = "^3.0.0"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^20.1.4"
flake8-builtins = "^1.5.3"
flake8-variables-names = "^0.0.3"

[tool.isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 4

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
