[tool.poetry]
name = "wol"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.7"
singledispatchmethod = { version = "^1.0", python = "~3.7.0" }
wakeonlan = "^1.1"
marshmallow = "^3.5.2"
validators = "^0.14.3"

fabric = { version = "^2.5", markers = "platform_machine != 'mips'", optional = true } # can't build pynacli

scapy = { version = "^2.4.3", optional = true }

peewee = { version = "^3.13.3", optional = true }
psycopg2-binary = { version = "^2.8.5", optional = true }

configargparse = { version = "^1.2.3", optional = true }
environs = { version = "^8.0.0", optional = true }
flask = { version = "^1.1.2", optional = true }
gunicorn = { version = "^20.0.4", optional = true }

typer = { version = "^0.3.2", optional = true }
Pygments = { version = "^2.7.4", optional = true }

[tool.poetry.extras]
ssh = ["fabric"]
scapy = ["scapy"]
db = ["psycopg2-binary", "peewee"]
web = ["gunicorn", "flask", "configargparse", "environs"]
cli = ["typer", "Pygments"]
all = [
  "fabric",
  "scapy",
  "psycopg2-binary", "peewee",
  "gunicorn", "flask", "configargparse", "environs",
  "typer", "Pygments",
]

[tool.poetry.dev-dependencies]
ipython = "^7.5"
flask-shell-ipython = "^0.4.1"
portray = "^1.4.0"
pytest = "^3.0"
flake8-isort = "^3.0.0"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^20.1.4"
flake8-builtins = "^1.5.3"
flake8-variables-names = "^0.0.3"
typer-cli = "^0.0.11"

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 4

[tool.portray]
modules = ["app"]

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
wol-cli = "wol.cli:app"
wol-dev-server = "wol.wsgi:dev_server"
